--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -22,6 +22,7 @@
                 <li><a href="https://github.com/ernesgarcia06/Evidencia-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
+        <hr>
         <h3>Práctica 2</h3>
         <p>En esta práctica se creo nuestra carpeta personal, en donde se realizo esta página.</p>
         <p>Realizado entre el 20 y 22 de agosto del 2025</p>
@@ -31,6 +32,7 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-20&until=2025-08-22" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
+        <hr>
         <h3>Práctica 3</h3>
         <p>En esta práctica se mejoro la página inicial sobre pasatiempos y se dividio en 5 páginas.</p>
         <p>Realizado entre el 27 y 29 de agosto del 2025</p>
@@ -41,6 +43,7 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-27&until=2025-08-29" target="_blank">Link Commits 27 a 29 Agosto</a></li>
             </ul>
         </nav>
+        <hr>
         <h3>Práctica 4</h3>
         <p>En esta práctica se cambio el diseño del link de nombre de usuario y se le dio un diseño personalizado.</p>
         <p>Realizado entre el 1 y 3 de septiembre del 2025</p>
@@ -49,6 +52,7 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-01&until=2025-09-03" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
+        <hr>
         <h3>Práctica 5</h3>
         <p>En esta práctica se utilizaron los selectores vistos previamente en clase y se aplicaron a nuestras páginas sobre pasatiempos.</p>
         <p>Realizado entre el 8 y 10 de septiembre del 2025</p>
@@ -56,6 +60,17 @@
             <ul>
                 <li><a href="selectores/index.html" target="_blank">Link Página Selectores</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-08&until=2025-09-10" target="_blank">Link Commits</a></li>
+            </ul>
+        </nav>
+        <hr>
+        <h3>Práctica 6</h3>
+        <p>Utilizando flexbox se creó el diseño que se presenta a continuación.</p>
+        <img width="810px" src="practica6/img/imagen_ejemplo.png" alt="IMAGEN">
+        <p>Realizado entre el 10 y 12 de septiembre del 2025.</p>
+        <nav>
+            <ul>
+                <li><a href="practica6/index.html" target="_blank">Práctica 6</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-10&until=2025-09-12" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
     </main>
