--- a/ernesgarcia06/practica6/index.html
+++ b/ernesgarcia06/practica6/index.html
@@ -13,26 +13,27 @@
     </header>
     <section id="s01">
         <div>
-            <img width="100px" src="img/REACT.png" alt="">
+            <img width="110px" height="110px" src="img/REACT.png" alt="REACT">
             <p>REACT</p>
         </div>
         <div>
-            <img width="100px" src="img/VUE_logo.png" alt="">
+            <img width="110px" height="110px" src="img/VUE_logo.png" alt="VUE">
             <p>VUE</p>
         </div>
         <div>
-            <img width="100px" src="img/sass_logo.png" alt="">
+            <img width="110px" height="110px" src="img/sass.svg" alt="SASS">
             <p>SASS</p>
         </div>
         <div>
-            <img width="100px" height="100px" src="img/tailwind_logo.png" alt="">
+            <img width="110px" height="110px" src="img/tailwind.svg" alt="TAIWIND">
             <p>TAILWIND</p>
         </div>
         <div>
-            <img width="100px" src="img/gsap.png" alt="">
+            <img width="100px" src="img/gsap.png" alt="GSAP">
             <p>GSAP</p>
         </div>
     </section>
     
+    <footer><address>&copy;Desarrollado por Luis Ernesto Guzmán García</address></footer>
 </body>
 </html>
