--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -8,7 +8,8 @@
 <body>
     <header>
         <a href="https://fdw52ad2025.github.io/website52/"><span style="font-size: 30px;">🏠</span></a>
-        <h1>Evidencias Fundamentos de Desarrollo Web</h1>
+        <h1>Evidencias Fundamentos de Desarrollo Web - LUIS ERNESTO GUZMÁN GARCÍA
+        </h1>
     </header>
     <main>
         <h2>Evidencia 1</h2>
@@ -38,7 +39,7 @@
         <p>Realizado entre el 27 y 29 de agosto del 2025</p>
         <nav>
             <ul>
-                <li><a href="pasatiemposver2/index.html" target="_blank">Link Práctica 3</a></li>
+                <li><a href="pasatiemposver2/index.html">Link Práctica 3</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-27&until=2025-08-27" target="_blank">Link Commits 27 Agosto</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-27&until=2025-08-29" target="_blank">Link Commits 27 a 29 Agosto</a></li>
             </ul>
@@ -58,7 +59,7 @@
         <p>Realizado entre el 8 y 10 de septiembre del 2025</p>
         <nav>
             <ul>
-                <li><a href="selectores/index.html" target="_blank">Link Página Selectores</a></li>
+                <li><a href="selectores/index.html">Link Página Selectores</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-08&until=2025-09-10" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
@@ -69,7 +70,7 @@
         <p>Realizado entre el 10 y 12 de septiembre del 2025.</p>
         <nav>
             <ul>
-                <li><a href="practica6/index.html" target="_blank">Práctica 6</a></li>
+                <li><a href="practica6/index.html">Práctica 6</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-10&until=2025-09-12" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
