Se agregaron las imagenes del selector por tipo

--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -29,8 +29,15 @@
                 <section>
                     <h3>Selector de tipo</h3>
                     <h3>Código CSS</h3>
-
+                    <img
+                        src="imgs/selector_tipo.png"
+                        alt="codigo del selector por tipo"
+                    />
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_tipo.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
