--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -60,6 +60,15 @@
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-09-08&until=2025-09-10"> Commits
 </a></li>
         </section>
+        <section>
+            <h3>Practica 5</h3>
+        <p>En la practica 6 de la evidencia 1, replicamos en un documento HTML, un ejemplo de la pagina codepen.io donde utilizando flexbox usamos diferentes elementos </p>
+        <h3>Links - Fechas del 10 a 12 de septiembre</h3>
+        <li><a href="https://fdw52ad2025.github.io/website52/oswtobias06/practica6/pract6.html"> Página diseño solicitado
+</a></li>
+        <!-- <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-09-08&until=2025-09-10"> Commits
+</a></li> -->
+        </section>
         </article>
     </main>
     <aside></aside>
