Codigo de selector por ID

--- a/atchz/pasatiempos2/pasatiempo1.html
+++ b/atchz/pasatiempos2/pasatiempo1.html
@@ -25,7 +25,7 @@
         </header>
         <main>
             <article>
-                <header><h2>Jugar videojuegos</h2></header>
+                <header id="titulo"><h2>Jugar videojuegos</h2></header>
 
                 <p>
                     Los videojuegos son uno de mis pasatiempos favoritos para
