se agrego el codigo del selector ID

--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -44,7 +44,12 @@
                     <h3>Selector por ID</h3>
                     <h3>Código CSS</h3>
 
+                    <img src="imgs/selector_ID.png" alt="codigo del selector" />
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_ID.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
