Codigo del selector por clase

--- a/atchz/pasatiempos2/pasatiempo1.html
+++ b/atchz/pasatiempos2/pasatiempo1.html
@@ -117,6 +117,7 @@
                 <ul>
                     <li lang="en">
                         <a
+                            class="juego_favorito"
                             target="_blank"
                             href="https://store.steampowered.com/app/367520/Hollow_Knight/"
                             >Hollow Knight</a
