se agregaron las imagenes del selector por clase

--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -54,7 +54,15 @@
 
                 <section>
                     <h3>Selector por clase</h3>
+                    <img
+                        src="imgs/selector_clase.png"
+                        alt="codigo del selector por clase"
+                    />
                     <h3>Código CSS</h3>
+                    <img
+                        src="imgs/resultado_clase.png"
+                        alt="resultado del selector"
+                    />
 
                     <h3>Resultados:</h3>
                 </section>
