--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -54,24 +54,32 @@
 
                 <section>
                     <h3>Selector por clase</h3>
+                    <h3>Código CSS</h3>
                     <img
                         src="imgs/selector_clase.png"
                         alt="codigo del selector por clase"
                     />
-                    <h3>Código CSS</h3>
+
+                    <h3>Resultados:</h3>
                     <img
                         src="imgs/resultado_clase.png"
                         alt="resultado del selector"
                     />
-
-                    <h3>Resultados:</h3>
                 </section>
 
                 <section>
                     <h3>Selector por atributo</h3>
                     <h3>Código CSS</h3>
+                    <img
+                        src="imgs/selector_atributo.png"
+                        alt="codigo del selector por atributo"
+                    />
 
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_atributo.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
