Se agrego la practica 5 a la pagina general

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -176,6 +176,41 @@
                     <footer></footer>
                 </section>
 
+                <section>
+                    <header>
+                        <h3>Práctica 5</h3>
+                    </header>
+
+                    <p>
+                        Utilizando sus archivos HTML sobre sus pasatiempos
+                        versión 2. Crear un sitio donde se muestre por lo menos
+                        un ejemplo de cada selector CSS.
+                    </p>
+
+                    <p>Fecha commits: 8 al 10 de Septiembre.</p>
+
+                    <nav>
+                        <ul>
+                            <li>
+                                <a
+                                    href="./practica5/index.html"
+                                    target="_blank"
+                                >
+                                    Link Página selectores:
+                                </a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://github.com/FDW52EJ2025/website52/commits/main/?author=atchz&since=2025-09-08&until=2025-09-10"
+                                    target="_blank"
+                                ></a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <footer></footer>
+                </section>
+
                 <footer>
                     <p>Desarrollado por Juan Antonio</p>
                 </footer>
