--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -85,8 +85,15 @@
                 <section>
                     <h3>Selector de lista</h3>
                     <h3>Código CSS</h3>
-
+                    <img
+                        src="imgs/selector_lista.png"
+                        alt="codigo del selector por lista"
+                    />
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_lista.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
