se realizaron las modificaciones de pasatiemposv2 para aplicar selectores

--- a/gfuelinme/pasatiemposv2/pasatiempo1.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo1.html
@@ -13,6 +13,14 @@
     <header>
         <h1>FÚTBOL</h1>
     </header>
+    <nav>
+        <ul class>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="pasatiempo2.html">Música</a></li>
+            <li><a href="pasatiempo3.html">Lectura</a></li>
+            <li><a href="pasatiempo4.html">Cine</a></li>
+        </ul>
+    </nav>
     <main>
         <article>
             <section>
@@ -30,14 +38,14 @@
         </article>
 
         <aside>
-            <section>
+            <section id="datosFutbol">
                 <h2>Dato curioso</h2>
-                <p>La primera vez que fuí al Estadio Universitario fue el 23 de octubre del 2010, en un partido contra los Pumas de la UNAM. Recuerdo que el marcador fue 2 a 0 a favor de Tigres con goles de Juninho y Damian Álvarez.</p>
+                <p>— "La primera vez que fuí al Estadio Universitario fue el 23 de octubre del 2010, en un partido contra los Pumas de la UNAM. Recuerdo que el marcador fue 2 a 0 a favor de Tigres con goles de Juninho y Damian Álvarez".</p>
             </section>
         </aside>
     </main>
     <footer>
-        <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+        <p class="textoFooter">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
     </footer>
 </body>
 </html>
