--- a/gfuelinme/pasatiemposv2/pasatiempo2.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo2.html
@@ -13,6 +13,14 @@
     <header>
         <h1>MÚSICA</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="pasatiempo1.html">Fútbol</a></li>
+            <li><a href="pasatiempo3.html">Lectura</a></li>
+            <li><a href="pasatiempo4.html">Cine</a></li>
+        </ul>
+    </nav>
     <main>
         <article>
             <section>
@@ -25,7 +33,7 @@
                     <h2>Mis artistas favoritos</h2>
                     <p>Tambien me gusta meterme a páginas como Soundcloud o Bandcamp para descubrir artistas nuevos, sobre todo aquellos que no son tan conocidos. A veces encuentro propuestas muy buenas que no suenan en ningún otro lado. Mi género favorito es el rock en español, me gusta por su estilo y por las letras, que muchas veces dicen cosas con las que me identifico. Aun así, trato de no quedarme solo con un tipo de música. Escucho otros géneros también, porque creo que conocer distintos estilos ayuda a abrir la mente y te hace crecer, tanto personalmente como en lo creativo.</p>
 
-                    <table border="1px">
+                    <table id="tablaMusica" border="1px">
                         <tr>
                             <th>Nombre</th>
                             <th>Género</th>
@@ -66,7 +74,7 @@
             </section>
         </article>
         <footer>
-            <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+            <p class="textoFooter">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
         </footer>
     </main>
 </body>
