--- a/gfuelinme/pasatiemposv2/pasatiempo4.html
+++ b/gfuelinme/pasatiemposv2/pasatiempo4.html
@@ -13,6 +13,14 @@
     <header>
         <h1>CINE</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="pasatiempo1.html">Fútbol</a></li>
+            <li><a href="pasatiempo2.html">Música</a></li>
+            <li><a href="pasatiempo3.html">Lectura</a></li>
+        </ul>
+    </nav>
     <main>
         <article>
             <section>
@@ -31,11 +39,11 @@
                 </p>
             </section>
 
-            <section>
+            <section id="datosCine">
                 <h2>Mis peliculas favoritas</h2>
                 <p>Las siguientes peliculas las recomiendo a casi cualquier persona:</p>
 
-                <table border="1px">
+                <table id="tablaCine" border="1px">
                     <tr>
                         <th>Nombre</th>
                         <th>Género</th>
@@ -61,12 +69,15 @@
                 </table>
 
                 <h2>Mencion honorifica</h2>
-                <p>A pesar de no ser una película, Skins es una de mis series favoritas. Puedo verla un montón de veces y nunca me aburre. Además, es una de las primeras series que miré durante mi adolescencia y me trae buenos recuerdos.</p>
+                <p>— "A pesar de no ser una película, Skins es una de mis series favoritas. Puedo verla un montón de veces y nunca me aburre. Además, es una de las primeras series que miré durante mi adolescencia y me trae buenos recuerdos".</p>
+
+                <p>Skins es una serie británica que sigue la vida de un grupo de adolescentes en Bristol mientras enfrentan los retos de la juventud: la amistad, el amor, la familia, las adicciones y la identidad. Cada temporada presenta una nueva generación de personajes con historias intensas y reales, explorando temas como la sexualidad, la salud mental y la presión social. La serie es conocida por su estilo fresco y su honestidad, mostrando tanto los momentos difíciles como los divertidos de crecer.</p>
+
                 <img width="560" height="315" src="imagenes/skins-serie.jpg" alt="Serie Skins">
             </section>
         </article>
         <footer>
-            <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+            <p class="textoFooter">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
         </footer>
     </main>
 </body>
