--- a/gfuelinme/pasatiemposv2/index.html
+++ b/gfuelinme/pasatiemposv2/index.html
@@ -14,11 +14,11 @@
         <h1>MIS PASATIEMPOS</h1>
     </header>
     <nav>
-        <ul class="nav-ul">
-            <li><a href="pasatiempo1.html" target="_blank">Fútbol</a></li>
-            <li><a href="pasatiempo2.html" target="_blank">Música</a></li>
-            <li><a href="pasatiempo3.html" target="_blank">Lectura</a></li>
-            <li><a href="pasatiempo4.html" target="_blank">Cine</a></li>
+        <ul>
+            <li><a href="pasatiempo1.html">Fútbol</a></li>
+            <li><a href="pasatiempo2.html">Música</a></li>
+            <li><a href="pasatiempo3.html">Lectura</a></li>
+            <li><a href="pasatiempo4.html">Cine</a></li>
         </ul>
     </nav>
     <main>
@@ -74,7 +74,7 @@
         </article>
     </main>
     <footer>
-        <p class="p-footer">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
+        <p class="textoFooter">Desarrollado por Jorge Ignacio Salazar Mares <br> Ciudad Universitaria, San Nicolás de los Garza, Nuevo León</p>
     </footer>
 </body>
 </html>
