se agregaron las imagenes del selector de descendientes

--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -99,8 +99,15 @@
                 <section>
                     <h3>Selector de descendientes</h3>
                     <h3>Código CSS</h3>
-
+                    <img
+                        src="imgs/selector_descendientes.png"
+                        alt="codigo del selector de descendientes"
+                    />
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_descendientes.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
