--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -69,9 +69,10 @@
         </section>
                 <section id="e1">
             <h3>Practica 6 - 10/09/2025 al 12/09/2025</h3>
-            <p>Kokokoko...</p>
+            <p>Para la practica 6, utilizando flexbox, creé un documento HTML donde diseñé lo que se muestra en la imagen siguiente: </p>
+            <img src="ejemplopractica6.png" alt="Ejemplo practica 6">
                 <ul class="listabotones">
-                <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/aLe.php27/selectorescss/index.html">PÁGINA DEL EJEMPLO DE FLEX</a></li>
+                <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/aLe.php27/practica6flexbox/index.html">PÁGINA DEL EJEMPLO DE FLEXBOX</a></li>
                 <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits?author=myAle27admin&since=2025-09-10&until=2025-09-12">COMMITS DEL 10/09/2025 al 12/09/2025</a></li>
                 </ul>
         </section>
