Selector universal y copia de página

--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -15,6 +15,7 @@
     <div class="intro">
         <h2>Introducción</h2>
         <p>Este reporte documenta la implementación y uso de <strong>10 tipos de selectores CSS</strong> aplicados a una copia del index de pasatiempos. Cada selector incluye su definición, código CSS implementado y capturas de pantalla mostrando el resultado visual.</p>
+        <a href="indexPasatiempo.html" target="_blank" rel="noopener noreferrer">Copia de pasatiempos</a>
     </div>
 
     <!-- SELECTOR UNIVERSAL -->
@@ -38,12 +39,12 @@
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            <img src="" alt="">
+            <img src="img/universal_css.png" alt="">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL RESULTADO EN LA PÁGINA]
+            <img src="" alt="">
         </div>
     </div>
 
@@ -362,9 +363,9 @@ section ~ footer {
         
         <h3>Archivos del proyecto:</h3>
         <ul>
-            <li><strong>index-pasatiempos-copia.html</strong> - Copia del index de pasatiempos con selectores aplicados</li>
+            <li><strong>indexPasatiempo.html</strong> - Copia del index de pasatiempos con selectores aplicados</li>
             <li><strong>selectores.css</strong> - Archivo CSS con todos los selectores implementados</li>
-            <li><strong>reporte-selectores.html</strong> - Este reporte (archivo actual)</li>
+            <li><strong>index.html</strong> - Este reporte (archivo actual)</li>
         </ul>
     </div>
 
