--- a/ErickLTI/p5/index.html
+++ b/ErickLTI/p5/index.html
@@ -65,9 +65,9 @@
 
             <section>
                 <h3>Selector hijos directos</h3>
-                <img src="" alt="">
+                <img src="img/img15.png" alt="">
                 <h3>Resulado</h3>
-                <img src="" alt="">
+                <img src="img/img16.jpeg" alt="">
             </section>
 
             <section>
