--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -11,12 +11,19 @@
 </head>
 <body>
     <header>
-        <h1>TIPOS DE SELECTORES</h1>
+        <h1>USO DE SELECTORES</h1>
     </header>
     <main>
         <article>
             <section>
                 <h2>Selector universal</h2>
+                <p>Aquí utilicé el selector universal para aplicar a todo el documento el tipo de fuente "Arial, sans-serif". Como podemos ver en la imagen, este estilo se aplica a todos los elementos que contengan texto.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-universal.png" alt="Selector universal de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-universal.png" alt="Fragmento de pagina">
             </section>
 
             <section>
