Selector de hermano adyacente

--- a/ErickLTI/p5/index.html
+++ b/ErickLTI/p5/index.html
@@ -72,9 +72,9 @@
 
             <section>
                 <h3>Selector hermano adyacente</h3>
-                <img src="" alt="">
+                <img src="img/img17.png" alt="">
                 <h3>Resulado</h3>
-                <img src="" alt="">
+                <img src="img/img18.jpeg" alt="">
             </section>
 
             <section>
