selector de tipo

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -28,6 +28,13 @@
 
             <section>
                 <h2>Selector de tipo</h2>
+                <p>Con este selector, aplique un fondo gris a todo el cuerpo del documento; además, quite el margin y padding que tiene el documento por defecto.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-tipo.png" alt="Selector de tipo de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-tipo.png" alt="Fragmento de pagina">
             </section>
 
             <section>
