bug de imagen arreglado

--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -101,7 +101,7 @@
             <h2> LINKS </h2>
                 <ul class="links">
                 <li><a href="practica5/index.html">Página de selectores</a></li>
-                <li><a href="">Link de commits</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=F-rn-ndo&since=2025-09-08&until=2025-09-10">Link de commits</a></li>
                 </ul>
     <!-- Fecha de elaboración de práctica 5 -->
             <h2> Fechas de elaboración de la práctica</h2>
