--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -39,12 +39,12 @@
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            <img src="img/universal_css.png" alt="">
+            <img src="img/universal_css.png" alt="universal css">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            <img src="" alt="">
+            <img src="img/universal_html.png" alt="universaal html">
         </div>
     </div>
 
@@ -73,7 +73,7 @@ section {
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL CÓDIGO CSS]
+            <img src="img/tipo_css.png" alt="">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
