Aplicación de estilos a la practica 6, falta poner la practica

--- a/aLe.php27/practica6flexbox/index.html
+++ b/aLe.php27/practica6flexbox/index.html
@@ -6,7 +6,26 @@
     <title>Flexbox</title>
     <link rel="stylesheet" href="estilosflex.css">
 </head>
-<body>
-    
+<body class="bodyflexbox">
+    <header class="headerflexbox">
+        <h1>FLEXBOX</h1>
+    </header>
+    <main class="mainflexbox">
+        <p>Ahorita pongo la practica</p>
+    </main>
+    <aside class="asideflexbox">
+        <img class="img-asideflexbox" src="asainteligente.png" alt="JimboJesus">
+        <h3>Propiedades del contenedor</h3>
+        <ul>
+            <li>flex-direction: Especifica como colocar los elementos flexibles. Los valores son row, column, row-reverse, column-reverse.</li>
+            <li>flex-wrap: Especifica si los elementos flexibles deben ajustarse o no.</li>
+            <li>flex-flow: Es una propiedad corta para especificar las propiedades flex-direction y flex-wrap properties.</li>
+            <li>justify-content: Alinea los elementos flexibles sobre el eje principal.</li>
+            <li>align-content: Alinea las lineas de contenido flexible (aplica cuando el contenedor tiene varias lineas). Los posibles valores son: flex-start, flex-end, space-around, space-between, space-evenly y stretch (es ultimo es el default)</li>
+        </ul>
+    </aside>
+    <footer class="footerflexbox">
+        <p>Desarrollado por Alejandro Santiago Coronado</p>
+    </footer>
 </body>
 </html>
