selector por id

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -39,6 +39,13 @@
 
             <section>
                 <h2>Selector por ID</h2>
+                <p>Aquí le di propiedades a la tabla con el id "#tablaMusica". Le modifiqué la altura, el ancho, el margen, el relleno y eliminé el borde que tiene por defecto.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-id.png" alt="Selector por ID de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-id.png" alt="Fragmento de pagina">
             </section>
 
             <section>
