imagenes de html y tipo agregado

--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -103,12 +103,12 @@ section {
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL CÓDIGO CSS]
+            <img src="img/id_css.png" alt="id css">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL RESULTADO EN LA PÁGINA]
+            
         </div>
     </div>
 
