--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -73,12 +73,12 @@ section {
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            <img src="img/tipo_css.png" alt="">
+            <img src="img/tipo_css.png" alt="tipo css">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL RESULTADO EN LA PÁGINA]
+            <img src="img/tipo_html.png" alt="tipo html">
         </div>
     </div>
 
@@ -108,7 +108,7 @@ section {
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            
+            <img src="img/id_html.png" alt="id html">
         </div>
     </div>
 
