Soundtrack de flexbox e icono de pagina

--- a/aLe.php27/practica6flexbox/index.html
+++ b/aLe.php27/practica6flexbox/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
     <link rel="stylesheet" href="estilosflex.css">
+    <link rel="icon" href="iconflexbox.png" type="image/png">
+    <audio src="soundtrackflexbox.mp3" autoplay loop></audio>
 </head>
 <body class="bodyflexbox">
     <header class="headerflexbox">
@@ -14,7 +16,7 @@
         <p>Ahorita pongo la practica</p>
     </main>
     <aside class="asideflexbox">
-        <img class="img-asideflexbox" src="asainteligente.png" alt="JimboJesus">
+        <img class="img-asideflexbox" src="asainteligente.png" alt="Asa inteligente explicandote las propiedades de flexbox">
         <h3>Propiedades del contenedor</h3>
         <ul>
             <li>flex-direction: Especifica como colocar los elementos flexibles. Los valores son row, column, row-reverse, column-reverse.</li>
