selector por clase

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -50,6 +50,13 @@
 
             <section>
                 <h2>Selector por clase</h2>
+                <p>Con este selector cambié el color del texto del pie de página; también lo alineé al centro para un mejor efecto visual.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-clase.png" alt="Selector por clase de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-clase.png" alt="Fragmento de pagina">
             </section>
 
             <section>
