selector por clase

--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -138,12 +138,12 @@ section {
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL CÓDIGO CSS]
+            <img src="img/clase_css.png" alt="clase css">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL RESULTADO EN LA PÁGINA]
+            <img src="img/clase_html.png" alt="clase html">
         </div>
     </div>
 
