--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -174,12 +174,12 @@ input[type="text"] {
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL CÓDIGO CSS]
+            <img src="img/atributo_css.png" alt="atributo css">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL RESULTADO EN LA PÁGINA]
+            <img src="img/atributo_html.png" alt="atributo html">
         </div>
     </div>
 
