selector por atributo

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -61,6 +61,13 @@
 
             <section>
                 <h2>Selector por atributo</h2>
+                <p>Aqui solamente cambie de color en texto de los links. Por defecto es azul, pero los puse en negro por la paleta de colores que estaba usando.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-atributo.png" alt="Selector por atributo de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-atributo.png" alt="Fragmento de pagina">
             </section>
 
             <section>
