--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -207,12 +207,12 @@ h1, h2, h3 {
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL CÓDIGO CSS]
+            <img src="img/lista_css.png" alt="lista css">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL RESULTADO EN LA PÁGINA]
+            <img src="img/lista_html.png" alt="lista html">
         </div>
     </div>
 
