selector por lista

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -61,7 +61,7 @@
 
             <section>
                 <h2>Selector por atributo</h2>
-                <p>Aqui solamente cambie de color en texto de los links. Por defecto es azul, pero los puse en negro por la paleta de colores que estaba usando.</p>
+                <p>Aquí solamente cambié de color el texto de los links. Por defecto es azul, pero los puse en negro por la paleta de colores que estaba usando.</p>
                 
                 <p>CSS:</p>
                 <img src="img/code-selector-atributo.png" alt="Selector por atributo de CSS">
@@ -72,6 +72,13 @@
 
             <section>
                 <h2>Selector por lista</h2>
+                <p>Con este selector cambié las dimensiones de las imágenes, los videos y los iframes para que se vieran proporcionales dentro de cada sección.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-lista.png" alt="Selector por lista de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-lista.png" alt="Fragmento de pagina">
             </section>
 
             <section>
