--- a/F-rn-ndo/practica5/index.html
+++ b/F-rn-ndo/practica5/index.html
@@ -347,12 +347,12 @@ section ~ footer {
 
         <h3>📸 Captura del Código CSS:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL CÓDIGO CSS]
+            <img src="img/hermanoGeneral_css.png" alt="hermano general css">
         </div>
 
         <h3>🌐 Resultado en HTML:</h3>
         <div class="image-placeholder">
-            [INSERTAR CAPTURA DEL RESULTADO EN LA PÁGINA]
+            <img src="img/hermanoGeneral_html.png" alt="hermano general html">
         </div>
     </div>
 
