Selector de hermano general

--- a/ErickLTI/p5/index.html
+++ b/ErickLTI/p5/index.html
@@ -79,9 +79,9 @@
 
             <section>
                 <h3>Selector hermano general</h3>
-                <img src="" alt="">
+                <img src="img/img19.png" alt="">
                 <h3>Resulado</h3>
-                <img src="" alt="">
+                <img src="img/img20.jpeg" alt="">
             </section>
         </article>
     </main>
