selector de descendientes

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -83,6 +83,13 @@
 
             <section>
                 <h2>Selector de descendientes</h2>
+                <p>Aquí modifiqué una lista desordenada dentro de una estructura "nav" que posteriormente utilicé como barra de navegación. Primero, quité la viñeta que tienen las listas por defecto; después, le di un comportamiento de contenedor flexible para acomodarlo en línea y, por último, agregué una separación de 40 píxeles entre cada elemento de la lista.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-descendientes.png" alt="Selector de descendientes de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-descendientes.png" alt="Fragmento de pagina">
             </section>
 
             <section>
