selector hijos directos

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -94,6 +94,13 @@
 
             <section>
                 <h2>Selector de hijos directos</h2>
+                <p>Con este selector solo cambié el color de la fuente de todos los elementos h1 que estén después de un header. También le cambié el tamaño de la fuente a 25 píxeles; esto hará que todos mis títulos tengan el mismo estilo.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-hijo-directo.png" alt="Selector de hijos directos de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-hijo-directo.png" alt="Fragmento de pagina">
             </section>
 
             <section>
