--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -113,8 +113,16 @@
                 <section>
                     <h3>Selector hijos directos</h3>
                     <h3>Código CSS</h3>
+                    <img
+                        src="imgs/selector_hijos_directos.png"
+                        alt="codigo del selector hijos directos"
+                    />
 
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_hijos_directos.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
