se agregaron las imagenes del hermano adyacente

--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -128,8 +128,15 @@
                 <section>
                     <h3>Selector hermano adyacente</h3>
                     <h3>Código CSS</h3>
-
+                    <img
+                        src="imgs/selector_hermano_adyacente.png"
+                        alt="codigo del selector hermano adyacente"
+                    />
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_hermano_adyacente.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
