selector de hermano adyacente

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -105,6 +105,13 @@
 
             <section>
                 <h2>Selector de hermano adyacente</h2>
+                <p>Aquí usé este selector para poder modificar el párrafo que estaba justo debajo del segundo título (h2) de mi sección. Como se puede ver, tuve que usar una id dentro de la sección, después especificar que dentro de la sección busque el segundo (2) elemento (nth-of-type) que sea un título (h2) y que modifique el párrafo (p).</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-hermano-adyacente.png" alt="Selector de hermano adyacente de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-hermano-adyacente.png" alt="Fragmento de pagina">
             </section>
 
             <section>
