Practica 6 realizada y completada

--- a/aLe.php27/practica6flexbox/index.html
+++ b/aLe.php27/practica6flexbox/index.html
@@ -13,7 +13,23 @@
         <h1>FLEXBOX</h1>
     </header>
     <main class="mainflexbox">
-        <p>Ahorita pongo la practica</p>
+        <div class="contenedor">
+            <div class="tarjeta">
+                <img src="imgflex/react.png" alt="React">
+            </div>
+            <div class="tarjeta">
+                <img src="imgflex/vue.png" alt="Vue">
+            </div>
+            <div class="tarjeta">
+                <img src="imgflex/tailwind.png" alt="Tailwind">
+            </div>
+            <div class="tarjeta">
+                <img src="imgflex/sass.png" alt="Sass">
+            </div>
+            <div class="tarjeta">
+                <img src="imgflex/gsap.png" alt="GSAP">
+            </div>
+        </div>
     </main>
     <aside class="asideflexbox">
         <img class="img-asideflexbox" src="asainteligente.png" alt="Asa inteligente explicandote las propiedades de flexbox">
