Se implementaron los selectores finales (hijo adyacente y hermano general)

--- a/Hugo-0699/pasatiemposmod/pasatiempo3.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo3.html
@@ -16,9 +16,7 @@
             <section id="cfondolista">
                 <h3>Ultimamente no he podido entrenar en el gimnasio, pero estuve yendo aproximadamente tres meses y medio, o incluso un poco más. Lo malo es que no asistía todos los días y ya no me resultaba tan rentable volver a pagar la mensualidad. Así que encontré una forma más económica de mantenerme activo y eso fue con la calistenia, la cual practico al menos dos horas al día. Pero ahora que ya voy a volver al GYM, retomaré la rutina que siempre suelo hacer:</h3>
                 <b>Les mostraré mi rutina de ejercicio semanal que hice en la tabla de la derecha 😅</b>
-            </section>
-            <section id="cfondolista">
-                 <b>Debajo hay un video que complemente la rutina &hearts;</b>
+                <b>Debajo hay un video que tambien muestra una rutina completa que les puede servir &hearts;</b>
             </section>
             <section class="fila-img-tabla">
                 <figure>
