--- a/Hugo-0699/selectores_css/index.html
+++ b/Hugo-0699/selectores_css/index.html
@@ -98,19 +98,20 @@
                 <h3>Selector por Hijos Adyacentes</h3>
                 <hr>
                 <h5>Código CSS:</h5>
-                <img src="" alt="">
+                <img src="img_selectores/s_hijoad.png" alt="">
                 <hr>
                 <h5>Resultado:</h5>
-                <img src="" alt="">
+                <img src="img_selectores/s_hijoad2.png" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Hermano General</h3>
                 <hr>
                 <h5>Código CSS:</h5>
-                <img src="" alt="">
+                <img src="img_selectores/s_hgeneral.png" alt="">
                 <hr>
                 <h5>Resultado:</h5>
-                <img src="" alt="">
+                <img src="img_selectores/s_hgeneral2.png" alt="">
+                <img src="img_selectores/s_hgeneral3.png" alt="">
             </section>
         </article>
     </main>
