--- a/Hugo-0699/pasatiemposmod/pasatiempo4.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo4.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <article>
-            <section>
+            <section id="color_fondo">
                 <h3> Este es un pasatiempo que he puesto en practica estas últimas semanas, ya que me ayuda mucho a concentrarme y a comprender mejor las cosas que estoy haciendo. Además, esto me permite desarrollar la imaginación y la creatividad como escritor para mis futuros proyectos.</h3>
             </section>
 
