selector de hermano general

--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -116,6 +116,13 @@
 
             <section>
                 <h2>Selector de hermano general</h2>
+                <p>Con este selector fue más sencillo, pues quería cambiar el estilo de letra a todos los párrafos que estén después del título (h2) y que estén al mismo nivel. También usé un id para indicar que solo se va a aplicar a esa sección.</p>
+                
+                <p>CSS:</p>
+                <img src="img/code-selector-hermano-general.png" alt="Selector de hermano general de CSS">
+
+                <p>Resultado:</p>
+                <img src="img/res-selector-hermano-general.png" alt="Fragmento de pagina">
             </section>
         </article>
     </main>
