--- a/victoriabalderas/selectores/index.html
+++ b/victoriabalderas/selectores/index.html
@@ -7,7 +7,10 @@
     <title>Practica 5</title>
 </head>
 <body>
-    <header><h1>Práctica 5 - Selectores CSS</h1></header>
+    <header>
+        <nav><a href="https://fdw52ad2025.github.io/website52/victoriabalderas/index.html">Regresar</a></nav>
+        <h1>Práctica 5 - Selectores CSS</h1>
+    </header>
     <main>
         <div class="contenedor">
             <div class="seccion-flex">
