se agregaron las imagenes del selector hermano general

--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -142,8 +142,15 @@
                 <section>
                     <h3>Selector hermano general</h3>
                     <h3>Código CSS</h3>
-
+                    <img
+                        src="imgs/selector_hermano_general.png"
+                        alt="codigo del selector hermano general"
+                    />
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_hermano_general.png"
+                        alt="resultado del selector"
+                    />
                 </section>
             </article>
         </main>
