--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -61,6 +61,15 @@
                  <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
             </ul>
         </article>
+
+        <article>
+            <h2>Practica 5</h2>
+            <p>Selectores</p>
+            <ul>
+                <li><a href="" target="_blank">Link Pagina</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
+            </ul>
+        </article>
     </main>
 
     <footer>
