--- a/NerickRamirez/PasatiemposV2/Pagina1.html
+++ b/NerickRamirez/PasatiemposV2/Pagina1.html
@@ -37,15 +37,15 @@
             <article>
                 <img src="img/PracticandoFutbol.jpeg" alt="Practicando futbol" class="imgfutbol">
                 <img src="img/visorias.jpg" alt="Escuela de Futbol" class="imgvisorias">
-                <p>
+                <p id="parrafo">
                     El futbol es un deporte que desde siempre me a encantado, tanto verlo, como practicarlo. Desde chiquito mi papa me
                     lo inculco y asimismo, el me a metido a distintos equipos de futbol.
                 </p>
-                <p>Mi sueño siempre fue ser portero y en su momento llegue a ir a visorias de Rayados</p>
+                <p id="parrafo">Mi sueño siempre fue ser portero y en su momento llegue a ir a visorias de Rayados</p>
                 <hr>
-                <h3>Rayados</h3>
+                <h2>Rayados</h2>
                 <img src="img/Rayados.jpg" alt="Estadio Rayados" class="imgestadio">
-                <p>
+                <p class="parrafo2">
                     Otra cosa que me gustaria mencionar, es el fanatismo que tengo con <b>Rayados</b>, ya que, desde que tengo memoria,
                     siempre e apoyado este equipo. Ademas, me gusta mucho asistir al estadio porque siempre hay muy buen
                     ambiente en la tribuna y es algo que realmente disfruto mucho.
