--- a/NerickRamirez/index.html
+++ b/NerickRamirez/index.html
@@ -30,8 +30,10 @@
 
         <h1>Practica 2</h1>
         <p>
-            En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.
+            En esta segunda práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.
         </p>
+            <li><a href="index.html">Pagina personal de evidencias</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/NerickRamirez?since=2025-08-20&until=2025-08-22">Commits</a></li>
         <h2>Fechas</h2>
         <p>Del 20 al 22 de agosto del 2025</p>
 
@@ -51,12 +53,48 @@
 
         <hr>
 
+        <h1>Practica 4</h1>
+        <p>
+            En esta cuarta practica se aplico un estilo personalizado al link de la página principal de la organización.
+        </p>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/NerickRamirez?since=2025-09-01&until=2025-09-03">Commits</a></li>
+        </ul>
+        <h2>Fechas</h2>
+        <p>Del 1 al 3 de septiembre del 2025</p>
+
+        <hr>
+
+        <h1>Practica 5</h1>
+        <p>
+            En esta quinta practica se creo un sitio donde se muestro por lo menos un ejemplo de cada selector CSS.
+        </p>
+        <ul>
+            <li><a href="Practica5/">Pagina Selectores</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/NerickRamirez?since=2025-09-08&until=2025-09-10">Commits</a></li>
+        </ul>
+        <h2>Fechas</h2>
+        <p>Del 8 al 10 de septiembre del 2025</p>
+
+        <hr>
+
+        <h1>Practica 6</h1>
+        <p>
+            En esta sexta practica se utilizo flexbox y se creo un documento HTML en donde se realizo un diseño.
+        </p>
+        <ul>
+            <li><a href="">Pagina Diseño Solicitado</a></li>
+            <li><a href="">Commits</a></li>
+        </ul>
+        <h2>Fechas</h2>
+        <p>Del 10 al 12 de septiembre del 2025</p>
+
+        <hr>
+
         <footer>
             Nerick Ramirez
         </footer>
 
     </main>
-    <aside></aside>
-    <footer></footer>
 </body>
 </html>
